--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pagal4",
   "main": "appi.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/appi.js"
   },
   "author": "skm4",
   "license": "ISC",
